# AutoFounder

./: .env.example  .git-commit-msg.tmp  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENT.md  CLAUDE.md  DEVELOPMENT.md  KAUSHLENDRA-SOLO-PLAN.md  Makefile  PLAN.md  PURNIMA-PROGRESS-NOTES.md  PURNIMA-TASKS.md  PURNIMA-TEAMLEAD-REPORT.md  PURNIMA_WORK_REPORT.md  README.md  branch-comparison.html  docker-compose.localstack.yml  docker-compose.yml  eslint.config.mjs  ideas_client.html  kaushal_inot.txt  marketing-pillar-plan.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  projectstructure-steps.txt  split_claude.py  task_assigned.md  test-prasenjit.txt  test.py  test.txt  tsconfig.base.json  turbo.json  vercel.json
apps/api/: README.md  pyproject.toml
apps/api/src/autofounder_ai/: __init__.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml  run_validator.py  turbo.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260603_0000_0001_initial.py  20260604_0001_0002_platform_schema.py  20260604_0002_0003_tenant_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py
backend/app/agents/_providers/: __init__.py  gemini_router.py  jinja_prompt_registry.py
backend/app/agents/architect/: __init__.py  agent.py  base_stub.py  graph.py  llm.py  prompt_loader.py  registry.py  routers.py  schema.py  state.py
backend/app/agents/coder/: __init__.py  agent.py  registry.py  schema.py
backend/app/agents/devops/: __init__.py  agent.py  graph.py  routers.py  run_local.py  schema.py  tools.py
backend/app/agents/llmops/: __init__.py  agent.py  registry.py  schema.py
backend/app/agents/marketing/: __init__.py  agent.py  graph.py  llm.py  prompt_loader.py  routers.py  schema.py  state.py
backend/app/agents/product_planner/: __init__.py  agent.py  coverage.py  persistence.py  registry.py  schema.py
backend/app/agents/research/: __init__.py  agent.py  fanout.py  groundedness.py  registry.py  schema.py
backend/app/agents/reviewer/: __init__.py  agent.py  e2e_test.py  graph.py  metrics.py  persistence.py  registry.py  routers.py  schema.py
backend/app/agents/strategy/: __init__.py  agent.py  graph.py  routers.py  schema.py  tools.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  artifacts.py  devops_approvals.py  feedback.py  gates.py  health.py  ideas.py  llmops.py  router.py  runs.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  metrics.py  middleware.py  observability.py  security.py
backend/app/db/: __init__.py  audit.py  base.py  cache.py  context.py  graph.py  object_store.py  redis_pool.py  relational.py  session.py  udal.py  vector.py
backend/app/eval/: __init__.py  __main__.py  baseline.py  cli.py  gate.py  golden_sets.py  harness.py  promptfoo_runner.py  schema.py
backend/app/guardrails/: __init__.py  audit.py  metrics.py  opa.py  pipeline.py  schema.py
backend/app/guardrails/stages/: __init__.py  execution_guard.py  input_guard.py  instruction_guard.py  monitoring.py  output_guard.py  policy.py
backend/app/llm/: __init__.py  router.py
backend/app/models/: __init__.py  artifact.py  gate.py  mixins.py  run.py
backend/app/orchestrator/: __init__.py  agent_worker_pb2.py  agent_worker_pb2.pyi  agent_worker_pb2_grpc.py  checkpointer.py  edges.py  engine.py  graph.py  nodes.py  state.py  worker.py
backend/app/orchestrator/events/: __init__.py  consumer.py  producer.py
backend/app/orchestrator/hitl/: __init__.py  gate_manager.py  notifier.py
backend/app/prompts/: registry.py
backend/app/rag/: pipeline.py
backend/app/schemas/: __init__.py  artifact.py  common.py  cost.py  devops_approval.py  feedback.py  gate.py  idea.py  run.py
backend/app/services/: __init__.py  run_service.py
backend/app/tools/: __init__.py  errors.py  registry.py  schema.py
backend/app/utils/: __init__.py
backend/app/workers/: __init__.py
backend/docker/: placeholder_http_server.py
backend/observability/: fluent-bit.conf
backend/scripts/: seed.py
backend/src/codepilot/: __init__.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_devops_approvals.py  test_endpoints.py  test_exception_handlers.py  test_health.py  test_metrics.py  test_run_service.py
backend/tests/agents/: test_base_agent.py  test_base_agent_guardrails.py
backend/tests/agents/coder/: test_coder_agent.py
backend/tests/agents/marketing/: conftest.py
backend/tests/agents/product_planner/: conftest.py
backend/tests/agents/research/: conftest.py
backend/tests/db/: test_cache.py  test_udal.py
backend/tests/guardrails/: conftest.py
backend/tests/orchestrator/: test_checkpointer.py  test_edges.py  test_engine.py  test_engine_persistence.py  test_graph.py  test_hitl_manager.py  test_sqs_worker.py  test_state.py
backend/tests/tools/: test_registry.py
backend/tests/unit/eval/: test_baseline.py  (+4 more)
(+672 files in other folders)
