[project]
name = "autfounder-ai-backend"
version = "0.0.0"
description = "AutoFounder AI Enterprise API (FastAPI — scaffolded in later phases)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "supabase>=2.9.0",
  "pgvector>=0.3.0",
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "google-generativeai>=0.8.0",
]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autofounder-ai"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["autfounder-ai"]
