[project]
name = "autofounder-ai-backend"
version = "0.1.0"
description = "AutoFounder AI — consolidated FastAPI backend (API gateway + orchestrator + agent workers)"
readme = "README.md"
requires-python = ">=3.12"
# Core runtime deps — kept lean so `uv sync` is fast and reliable on every OS.
# Heavy/optional integrations live in the named groups below and are imported lazily.
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "structlog>=24.4.0",
  "httpx>=0.27.0",
  "pyjwt>=2.8.0",
  "redis[hiredis]>=5.0.0",
  "boto3>=1.34.0",
  "jinja2>=3.1.2",
  "google-generativeai>=0.8.0",
  "langgraph>=0.2.0",
  "prometheus-client>=0.21.0",
]

[dependency-groups]
# Installed by default with `uv sync`.
dev = [
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "fakeredis>=2.26.0",
  "grpcio-tools>=1.71.2",
  "mypy-protobuf>=5.1.0",
  "respx>=0.21.0",
]
# Installed on demand (data/messaging/observability). langgraph + google-generativeai
# are now core runtime deps, so there is no separate `agents` group.
data = ["supabase>=2.9.0", "pgvector>=0.3.0"]
messaging = ["confluent-kafka>=2.6.0"]
observability = [
  "opentelemetry-sdk>=1.28.0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
extend-exclude = [
  "alembic",
  "*_pb2.py",
  "*_pb2_grpc.py",
  "tests/agents/reviewer/fixtures",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `param: T = Depends(...)` is the idiomatic DI pattern, not a bug.
# UP046: Support Generic[T] classes without forcing Python 3.12-only type parameter syntax.
# UP047: Support generic functions without forcing Python 3.12-only type parameter syntax.
ignore = ["B008", "UP046", "UP047"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["alembic/", "agent_worker_pb2.*", "tests/agents/reviewer/fixtures/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
